add: Update Burn
